some style fixes

--- a/hw-highcharts/index.html
+++ b/hw-highcharts/index.html
@@ -63,12 +63,12 @@ var options = {
   },
   tooltip: {
     // hints: borderRadius, borderWidth, shadow
-    borderRadius: 1,
-    borderWidth: 2,
+    borderRadius: 5,
+    borderWidth: 1.5,
     shadow: true,
     style: {
       // hints: color, fontFamily, fontSize, padding
-        color:"#1111bb",
+        color:"black",
         fontFamily: "Helvetica,Arial,sans-serif",
         padding: "5px",
         fontSize: "12px",
@@ -85,8 +85,8 @@ var options = {
   },
   yAxis: {
     // hints: gridLineColor, gridLineDashStyle
-    gridLineColor: "#1400eb",
-    gridLineDashStyle: "dash",
+    gridLineColor: "#aaaaaa",
+    gridLineDashStyle: "ShortDot",
     labels: {
       style: {
         color: "#333333",
