--- a/hw-d3/index.html
+++ b/hw-d3/index.html
@@ -52,5 +52,5 @@ text {
   <a href="../" rel="author">Mike Bostock</a>
 </header>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="d3.min.js"></script>
 <script src="code2.js"></script>
